--- a/sites/all/themes/victoria/css/custom.css
+++ b/sites/all/themes/victoria/css/custom.css
@@ -216,6 +216,9 @@ a:hover, a:focus {
   padding: 0 10px 40px 0;
   border: none;
 }
+.vs-category-content td.col-last {
+  padding-right: 0;
+}
 .vs-category-content td .vs-category-product-image{
   margin-bottom: 10px;
 }
@@ -692,4 +695,80 @@ a.ui-callout, a.ui-callout:visited {
   margin-bottom: 0;
   padding-bottom: 0;
   background-image: none;
+}
+.panel-open {
+  border: 1px solid #e5e5e5;
+  background-color: white;
+}
+.panel-open .panel-title {
+  padding: 20px 20px 15px 20px;
+}
+.panel-open .panel-title {
+  border-bottom: 1px solid #E5E5E5;
+}
+.checkout-body {
+  padding: 20px;
+}
+body .signin {
+  display: inline-block;
+  width: 198px;
+  margin: 0 10px 0 0;
+}
+.ui-vr {
+  background: url(../images/dotted-rule-vert.gif) repeat-y;
+  width: 1px;
+  display: inline-block;
+  height: 200px;
+  vertical-align: top;
+}
+.panel-open .checkout-body .checkout-option {
+  display: inline-block;
+  width: 197px;
+  margin: 0 0 20px 20px;
+  vertical-align: top;
+}
+.signin-body label {
+  margin: 10px 0px 5px;
+  font: 11px/14px Arial,Verdana,sans-serif;
+}
+.checkout .ui-alert {
+  display: inline-block;
+  background-color: #ffe5ee;
+  border: 1px solid #edb5c9;
+  color: #c93567;
+  padding: 10px 9px;
+}
+.checkout input {
+  background-color: #FFF;
+  border: 1px solid #CCC;
+  color: #1A1A1A;
+  font-size: 11px;
+  padding: 5px 7px;
+}
+.checkout input:focus {
+  border: 1px solid #b3b3b3;
+  background-color: #f2f2f2;
+}
+.checkout input.error {
+  background-color: #FFE5EE;
+  border: 1px solid #EDB5C9;
+  color: #C93567;
+}
+.signin-body input {
+  width: 170px;
+}
+.ui-alert {
+  margin-right: 13px;
+  margin-top: 10px;
+}
+.ui-alert p, .highlevel-alert p, .ui-error-pmry p {
+  background: url(../images/alert.png) no-repeat 0 1px transparent;
+  padding: 0 17px;
+}
+.checkout-option h3 {
+  margin-bottom: 24px;
+}
+.checkout button {
+  width: 187px;
+  margin-top: 10px;
 }
