--- a/sites/all/themes/victoria/css/style.css
+++ b/sites/all/themes/victoria/css/style.css
@@ -1151,9 +1151,8 @@ fieldset.collapsed {
   border-radius: 0;
 }
 fieldset legend {
-  background: #dbdbdb;
+  background: #fff;
   border: 1px solid #ccc;
-  border-bottom: none;
   color: #3b3b3b;
   display: block;
   height: 2em;
@@ -1164,16 +1163,9 @@ fieldset legend {
   position: absolute;
   text-indent: 10px;
   text-shadow: 0 1px 0 #fff;
-  top: -12px;
+  top: -25px;
   width: 100%;
-  -khtml-border-radius-topleft: 4px;
-  -moz-border-radius-topleft: 4px;
-  -webkit-border-top-left-radius: 4px;
-  border-top-left-radius: 4px;
-  -khtml-border-radius-topright: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-top-right-radius: 4px;
-  border-top-right-radius: 4px;
+
 }
 fieldset.collapsed legend {
   -khtml-border-radius: 4px;
